--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "next:dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx --fix ./",
     "slicemachine": "start-slicemachine",
     "format": "prettier --write ."
   },
@@ -27,8 +27,12 @@
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.22",
     "concurrently": "^8.2.2",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5",
     "eslint-config-next": "^14.1.3",
+    "sass": "^1.74.1",
     "slice-machine-ui": "^1.26.0",
     "typescript": "^5.4.2"
   }
