--- a/package.json
+++ b/package.json
@@ -26,14 +26,18 @@
     "@types/node": "^20.11.27",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.22",
+    "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "postcss": "^8.4.38",
+    "postcss-import": "^16.1.0",
     "prettier": "^3.2.5",
-    "eslint-config-next": "^14.1.3",
     "sass": "^1.74.1",
     "slice-machine-ui": "^1.26.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.2"
   }
 }
