--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "postcss": "^8.4.38",
-    "postcss-import": "^16.1.0",
     "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.13",
     "sass": "^1.74.1",
     "slice-machine-ui": "^1.26.0",
     "tailwindcss": "^3.4.3",
