--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,9 +4,14 @@
     "sourceType": "module"
   },
   "extends": [
+    "next/core-web-vitals",
+    "prettier",
+    "next",
     "plugin:prettier/recommended" // Ensures ESLint works well with Prettier
   ],
   "rules": {
-    "prettier/prettier": "error" // Ensures Prettier issues are treated as errors
+    "prettier/prettier": "error", // Ensures Prettier issues are treated as errors
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off"
   }
 }
